--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,9 @@
 /* App.css */
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
 
 .App {
   text-align: center;
@@ -46,6 +51,6 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    width: 105%;
+    /* width: 100%; */
   }
 }
