--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -279,7 +279,7 @@
     flex-direction: column;
     align-items: center;
     margin: 10px;
-    background-color: #fcf    cdd;
+    background-color: #fcfcdd;
     padding: 10px;
     border-radius: 5px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -434,6 +434,10 @@
 
     .hero-text {
         padding: 5px;
+    }
+
+    .hero-img {
+        margin-top: 25px;
     }
 
     .hero-img img {
